optmization DFS and BFS